# snakler

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  app.py  helpers.py  routes.py  typedef.py
backend/app/core/: broker.py  websocket.py
backend/app/functions/: move_player.py
backend/tests/: conftest.py  test_broker.py  test_routes.py  test_websocket.py
backend/tests/tests_functions/: test_move.py
front/: package.json  pnpm-lock.yaml
front/src/: Main.elm  index.html  main.ts
frontend/.parcel-cache/: abdaa22298f60f34-AssetGraph  bab67aa0374eb997-BundleGraph  de6c3b5ebe236e42-RequestGraph  lock.mdb  snapshot-de6c3b5ebe236e42.txt
frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo
frontend/src/: Main.elm
server/: pyproject.toml
server/src/chat/: __init__.py  broker.py  helpers.py  typedef.py
server/src/chat/functions/: move.py  move_player.py
server/src/chat/templates/: index.html
server/tests/: __init__.py  test_broker.py  test_websocket.py
server/tests/tests_functions/: test_move.py
